<resources>
    <string name="app_name">FinanControl</string>
    <string name="add_category">Add Category</string>
    <string name="ex_salary">Ex. Salary</string>
    <string name="basic_number">Ex. 100</string>
    <string name="add_income_expense">Add Income/Expense</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <!-- Deletion Section -->
    <string name="category_deletion_title">Are your sure you want to delete this Category ?</string>
    <string name="category_deletion_description">This option will delete this category and its content</string>
    <string name="insight_deletion_title">Are your sure you want to delete this Income/Expense ?</string>
    <string name="insight_delete_description">This option will delete this item</string>
    <!-- Dialog validation -->
    <string name="dialog_should_not_be_empty">Field must not be empty</string>
    <string name="dialog_income_expense_max_length">Max length digit overcome</string>
    <string name="dialog_category_max_length">You can type at most 15 characters</string>
    <string name="overview">Total Balance</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="all">All</string>
    <!-- Insight Fragment view -->
    <string name="insight_item_tapped">%s: %s on %s</string>
    <string name="insight_point_item_tapped">This item is: %s</string>
    <string name="empty_insight_screen">Tap on the ➕ button to add a new Income/Expense</string>

    <!-- Menus -->
    <string name="menu_currency">Currency</string>
    <string name="menu_themes">Themes</string>
    <string name="still_working">We are working on this</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Let\'s start adding a new category for your Income/Expenses 🤑</string>

    <!-- Drawer -->
    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
</resources>