<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insight.InsightFragment">

    <com.locotoDevTeam.financontrol.fancyChart.FancyChart
        android:id="@+id/insight_fancy_chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myChipGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_add_insight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/myChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedChip="@id/chipAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            android:text="@string/all"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipIncome"
            android:text="@string/income"
            style="@style/customChipIncomeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipExpense"
            android:text="@string/expense"
            style="@style/customChipExpenseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txtEmptyIncomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_insight_screen"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/incomeAnimation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmptyIncomes"
        app:lottie_autoPlay="true"
        app:lottie_fileName="income.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/emptyAnimation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_section"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:lottie_fileName="empty.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

</androidx.constraintlayout.widget.ConstraintLayout>